--- a/KosaESS/src/main/resources/templates/admin/company_list.html
+++ b/KosaESS/src/main/resources/templates/admin/company_list.html
@@ -37,7 +37,7 @@
 					<!-- 총 개수 및 버튼-->
 					<div class="content_info_wrap">
 						<div>
-							기업 총 <span class="cnt" th:text="${#lists.size(companyList)}"></span>
+							총 <span class="cnt" th:text="${#lists.size(companyList)}"></span>
 							개사
 						</div>
 						<button id="delete_btn">
