--- a/KosaESS/src/main/resources/static/css/admin/applicant_list.css
+++ b/KosaESS/src/main/resources/static/css/admin/applicant_list.css
@@ -89,6 +89,7 @@ a {
 	font-size: 15px;
 	font-weight: bold;
 	display:flex;
+	justify-content: space-between;
 }
 
 .home-section .content_bottom .content_info_wrap .class_list_cnt {
@@ -97,7 +98,6 @@ a {
 
 .content_info_wrap .content_info {
 	padding: 5px;
-	width: 95%;
 }
 
 .content_info_wrap .content_info_btn_wrap {
@@ -115,6 +115,8 @@ a {
 	margin: 2px;
 	padding: 5px;
 	cursor: pointer;
+	align-items: center;
+    justify-content: space-around;
 }
 
 .content_list {
@@ -159,3 +161,20 @@ a {
 .td_check, .td_num, .td_apply_id, .td_stdt_id, .td_stdt_nm, .td_status{
 	text-align: center;
 } 
+
+#excel_btn {
+	border: 2px solid green;
+	background: white;
+	color: green;
+	border-radius: 3px;
+	font-weight: bold;
+	display: flex;
+	margin: 2px;
+	padding: 5px;
+	cursor: pointer;
+}
+
+#excel_btn > img{
+	margin-right: 5px;
+	width: 20px;
+}
