--- a/KosaESS/src/main/resources/static/css/admin/manager_list.css
+++ b/KosaESS/src/main/resources/static/css/admin/manager_list.css
@@ -211,3 +211,17 @@
 	color: red;
 	vertical-align: middle;
 }
+
+.blue{
+	color:blue;
+}
+
+#excel_btn {
+	border: 2px solid green;
+	background: white;
+	color: green;
+}
+
+#excel_btn > img{
+	margin-right: 5px;
+}
