--- a/KosaESS/src/main/resources/templates/admin/lecture_list.html
+++ b/KosaESS/src/main/resources/templates/admin/lecture_list.html
@@ -37,7 +37,7 @@
 					<!-- 총 개수 및 버튼-->
 					<div class="content_info_wrap">
 						<div>
-							강의 총 <span class="lecture_cnt cnt"
+							총 <span class="lecture_cnt cnt"
 								th:text="${#lists.size(lectureList)}"></span> 개
 						</div>
 						<div class="content_info_button_wrap" style="display: flex;">
