--- a/KosaESS/src/main/resources/templates/admin/notice_list.html
+++ b/KosaESS/src/main/resources/templates/admin/notice_list.html
@@ -21,7 +21,8 @@
 			<div class="title">공지사항 관리</div>
 			<!-- Route -->
 			<div class="route">
-				<a th:href="@{/admin}">대시보드</a> > <a th:href="@{/admin/notice/list}">공지사항 관리</a>
+				<a th:href="@{/admin}">대시보드</a> > <a th:href="@{/admin/notice/list}">공지사항
+					관리</a>
 			</div>
 		</div>
 		<!-- Content Top -->
@@ -76,21 +77,26 @@
 			<!-- 컨텐츠 개수와 버튼 wrap -->
 			<div class="content_info_wrap">
 				<div class="content_info">
-					<span>게시물 총 <span class="notice_list_cnt"
+					<span>총 <span class="notice_list_cnt"
 						th:text="${#lists.size(noticeList)}">noticeListCnt</span> 건
 					</span>
 				</div>
 				<div class="content_info_btn_wrap">
+					<!-- 엑셀 다운로드 버튼 -->
+					<button type="button" id="excel_btn">
+						<img th:src="@{/img/excel.png}"><span>엑셀 다운로드</span>
+					</button>
+
 					<!-- 선택삭제 버튼 -->
 					<button type="button" id="delete_btn">
 						<img th:src="@{/img/minus_white.png}"><span>선택삭제</span>
 					</button>
 
 					<!-- 등록하기 버튼 -->
-					<a th:href="@{/admin/notice/insert}" style="text-decoration: none;">
-						<button type="button">
-							<img th:src="@{/img/plus_white.png}"><span>등록하기</span>
-						</button>
+					<button type="button"
+						onclick="location.href='/admin/notice/insert' ">
+						<img th:src="@{/img/plus_white.png}"><span>등록하기</span>
+					</button>
 					</a>
 				</div>
 			</div>
@@ -98,15 +104,14 @@
 
 			<!-- 컨텐츠 리스트 부분 -->
 			<div class="content_list">
-				<div th:if="${#lists.size(noticeList)==0}" style="text-align:center;">
-					조회 결과가 없습니다.
-				</div>
-				<table class="content_list_table" th:if="${#lists.size(noticeList)>0}">
+				<div th:if="${#lists.size(noticeList)==0}"
+					style="text-align: center;">조회 결과가 없습니다.</div>
+				<table class="content_list_table"
+					th:if="${#lists.size(noticeList)>0}">
 					<thead>
 						<tr class="content_list_th">
-							<th style="width: 3%;">
-								<input type="checkbox" name="select_all" onclick="selectAll(this)">
-							</th>
+							<th style="width: 3%;"><input type="checkbox"
+								name="select_all" onclick="selectAll(this)"></th>
 							<th style="width: 5%;">번호</th>
 							<th style="width: 62%;">제목</th>
 							<th style="width: 5%;">첨부파일</th>
@@ -117,16 +122,20 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr class="content_list_td" th:each="notice, iterStat: ${noticeList}">
-							<td class="notice_check">
-								<input class="input_check" type="checkbox" name="select" onclick="checkSelectAll()" th:value="${notice.postId}"></td>
+						<tr class="content_list_td"
+							th:each="notice, iterStat: ${noticeList}">
+							<td class="notice_check"><input class="input_check"
+								type="checkbox" name="select" onclick="checkSelectAll()"
+								th:value="${notice.postId}"></td>
 							<td class="notice_num" th:text="${iterStat.index + 1}"></td>
-							<td><a class="notice_title" th:href="@{/admin/notice/view/__${notice.postId}__}"
+							<td><a class="notice_title"
+								th:href="@{/admin/notice/view/__${notice.postId}__}"
 								th:text="${notice.postTitle}"></a></td>
 							<td class="notice_file"><img th:if="${notice.fileId!=null}"
 								class="file_img" th:src="@{/img/file.png}"></td>
 							<td class="mngr_nm" th:text="${notice.mngrNm}"></td>
-							<td class="rgst_dd" th:text="${#dates.format(notice.rgstDt, 'yyyy-MM-dd')}"></td>
+							<td class="rgst_dd"
+								th:text="${#dates.format(notice.rgstDt, 'yyyy-MM-dd')}"></td>
 							<td class="notice_hit" th:text="${notice.postHit}"></td>
 							<td class="notice_status" th:text="${notice.cmcdNm}"></td>
 						</tr>
@@ -339,6 +348,9 @@
 							var tdStatus = document.createElement("td");
 							tdStatus.className ="notice_status";
 							tdStatus.textContent= notice.cmcdNm;
+							if(notice.cmcdNm == '비공개'){
+								tdStatus.classList.add('blue');
+							}
 							tr.appendChild(tdStatus);
 
 							tbody.appendChild(tr);
@@ -365,6 +377,14 @@
 
 			   return formattedTimestamp;
 		}
+		
+		//상태값마다 다른 색상
+		var statusNms = document.querySelectorAll('.notice_status');
+		statusNms.forEach((statusNm) => {
+	  	if (statusNm.textContent === '비공개') {
+	  		statusNm.classList.add('blue');
+	  	}
+		});
 	</script>
 </body>
 </html>
