--- a/KosaESS/src/main/resources/templates/manager/subsidy_view.html
+++ b/KosaESS/src/main/resources/templates/manager/subsidy_view.html
@@ -37,39 +37,34 @@
 				<!-- 검색 필터 테이블 -->
 				<div class="search_filter_table">
 					<div class="search_filter_name">
-						교육과정명<span class="star">*</span>
+						교육과정
 					</div>
 					<div class="search_filter_input">
 						<select id="classId">
 							<option value="" disabled selected>교육과정명을 선택하세요</option>
-							<option th:each="class:${classList}" th:text="${class.clssNm}"
-								th:value="${class}" />
+							<option th:each="class:${classList}" th:text="${class.clssNm}" th:value="${class}" />
 						</select>
 					</div>
 					<div class="search_filter_name">
-						출결 기간<span class="star">*</span>
+						검색 기간(변경해야됨)
 					</div>
 					<div class="search_filter_input_date_wrap">
 						<div class="search_filter_input_date">
 							<input type="date" id="startDate" min="1980-01-01"> <span> ~ </span> <input type="date" id="endDate" min="1980-01-01">
-						</div>
-						<div class="search_filter_input_radio">
-							<span>이번 달</span><input type="radio" name="default_period" id="this_month" value="thisMonth">
-							<span>이번 주</span> <input type="radio" name="default_period" id="this_week" value="thisWeek">
-							<span>시작~종료</span> <input type="radio" name="default_period" id="this_class_period" value="thisClassPeriod">
 						</div>
 					</div>
 					<div class="search_filter_name">검색어</div>
 					<div class="search_filter_input">
 						<input type="text" class="input_keyword" placeholder="이메일 또는 이름">
 					</div>
-					<div class="search_filter_name">이수 상태</div>
+					<div class="search_filter_name">지급 상태</div>
 					<div class="search_filter_input">
 						<span class="chk_all_span">
-						<label th:text="전체" class="chk_all_label"></label> <input type="checkbox" checked="checked" id="chk_all_cmpt">
-						</span> <span class="chk_all_span" th:each="cmptCN:${cmptCodeNameList}">
-							<label class="cmpt_name" th:text="${cmptCN.cmcdNm}"></label>
-							<input class="cmpt_checkbox" type="checkbox" checked="checked" th:value="${cmptCN.cmcdId}">
+							<label th:text="전체" class="chk_all_label"></label> <input type="checkbox" checked="checked" id="chk_all_cmpt">
+						</span>
+						<span class="chk_all_span" th:each="monyCN:${monyCodeNameList}">
+							<label class="mony_name" th:text="${monyCN.monyNm}"></label>
+							<input class="mony_checkbox" type="checkbox" checked="checked" th:value="${monyCN.monyId}">
 						</span>
 					</div>
 				</div>
@@ -87,11 +82,11 @@
 			<!-- 테이블 조작 -->
 			<div class="table_controller" id="tableController">
 			<div>
-				<span th:text="${stdtCnt}" id="stdtCnt"></span>
+				<span th:text="${subsidyListStat.Size}" id="stdtCnt"></span>
 				<span class="stdt_count_unit">명</span>
 			</div>
-			<div class="cmpt_button">
-				<button th:each="cmptCodeName:${cmptCodeNameList}" onclick="cmptUpdate(this)" th:value="${cmptCodeName.cmcdId}" th:text="${cmptCodeName.cmcdNm}" class="cmpt_btn" th:classappend="${cmptCodeNameStat.count}"></button>
+			<div class="mony_button">
+				<button th:each="monyCodeName:${monyCodeNameList}" onclick="cmptUpdate(this)" th:value="${cmptCodeName.cmcdId}" th:text="${cmptCodeName.cmcdNm}" class="mony_btn"></button>
 			</div>
 			</div>
 			<!-- End : 테이블 조작 -->
@@ -104,31 +99,18 @@
 						<th>번호</th>
 						<th>이름</th>
 						<th>이메일</th>
-						<th>연락처</th>
-						<th>성별</th>
-						<th>생년월일</th>
-						<th th:each="wlogCodeName:${wlogCodeNameList}"
-							th:text="${wlogCodeName.cmcdNm}"></th>
-						<th>이수율<br>(%)
-						</th>
-						<th>이수 상태</th>
+						<th></th>
 					</tr>
 				</thead>
 				<tbody id="stdt_list_table_tbody" class="stdt_list_table_tbody">
-					<tr th:each="stdt:${stdtList}" class="stdt_list_table_row">
-						<td class="fixed_length_cell"><input type="checkbox"
-							name="checkedStdt" th:value="${stdt.stdtId}"></td>
-						<td class="fixed_length_cell" th:text="${stdtStat.count}"></td>
-						<td class="fixed_length_cell" th:text="${stdt.stdtNm}"></td>
-						<td th:text="${stdt.userEmail}">이메일</td>
-						<td class="fixed_length_cell" th:text="${stdt.stdtTel}">연락처</td>
-						<td class="fixed_length_cell" th:text="${stdt.genderCd}">성별</td>
-						<td class="fixed_length_cell" th:text="${stdt.birthDd}">생년월일</td>
-						<td class="number_cell" th:each="wlogCodeName:${wlogCodeNameList}"
-							th:text="${#strings.substring(#strings.setSplit(stdt.wlogCnt,',')[wlogCodeNameStat.count-1],10,)}">?</td>
-						<td class="number_cell"
-							th:text="${#numbers.formatDecimal(stdt.cmptRate, 1, 1)}"></td>
-						<td class="fixed_length_cell" th:text="${stdt.jobCd}">이수여부</td>
+					<tr th:each="subsidy:${subsidyList}" class="stdt_list_table_row">
+						<td class="fixed_length_cell">
+							<input type="checkbox" name="checkedStdt" th:value="${stdt.stdtId}">
+						</td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
 					</tr>
 				</tbody>
 			</table>
