--- a/KosaESS/src/main/resources/templates/manager/subsidy_view.html
+++ b/KosaESS/src/main/resources/templates/manager/subsidy_view.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 </head>
 <head>
-<link th:href="@{/css/manager/manager_student_list.css}" rel="stylesheet" />
+<link th:href="@{/css/manager/manager_subsidy_view.css}" rel="stylesheet" />
 <link th:href="@{/css/manager/alert_box.css}" rel="stylesheet" />
 </head>
 <body>
@@ -23,12 +23,12 @@
 		<!-- title -->
 		<div class="title_wrap">
 			<span class="title" th:text="${title}"></span> <br>
-<!-- 			<div style="display: none;"> -->
-			<div>
-				<input id="class_id_save" type="text">
-				<input id="start_date_save" type="text" th:value="${thisClass.clssId!=null?thisClass.clssStartDd:null}">
-				<input id="end_date_save" type="text" th:value="${thisClass.clssId!=null?thisClass.clssEndDd:null}">
-				<input id="keyword_save" type="text">
+			<div style="display: none;">
+<!-- 			<div> -->
+<!-- 				input id="class_id_save" type="text"> -->
+<!-- 				input id="start_date_save" type="text" th:value="${thisClass.clssId!=null?thisClass.clssStartDd:null}"> -->
+<!-- 				input id="end_date_save" type="text" th:value="${thisClass.clssId!=null?thisClass.clssEndDd:null}"> -->
+<!-- 				input id="keyword_save" type="text"> -->
 			</div>
 		</div>
 		<!-- content wrap-->
@@ -63,8 +63,8 @@
 							<label th:text="전체" class="chk_all_label"></label> <input type="checkbox" checked="checked" id="chk_all_cmpt">
 						</span>
 						<span class="chk_all_span" th:each="monyCN:${monyCodeNameList}">
-							<label class="mony_name" th:text="${monyCN.monyNm}"></label>
-							<input class="mony_checkbox" type="checkbox" checked="checked" th:value="${monyCN.monyId}">
+							<label class="mony_name" th:text="${monyCN.cmcdNm}"></label>
+							<input class="mony_checkbox" type="checkbox" checked="checked" th:value="${monyCN.cmcdId}">
 						</span>
 					</div>
 				</div>
@@ -81,13 +81,13 @@
 
 			<!-- 테이블 조작 -->
 			<div class="table_controller" id="tableController">
-			<div>
-				<span th:text="${subsidyListStat.Size}" id="stdtCnt"></span>
-				<span class="stdt_count_unit">명</span>
-			</div>
-			<div class="mony_button">
-				<button th:each="monyCodeName:${monyCodeNameList}" onclick="cmptUpdate(this)" th:value="${cmptCodeName.cmcdId}" th:text="${cmptCodeName.cmcdNm}" class="mony_btn"></button>
-			</div>
+				<div>
+					<span th:text="${resultCount}" id="result_count"></span>
+					<span class="stdt_count_unit">명</span>
+				</div>
+				<div class="mony_button">
+					<button th:each="monyCodeName:${monyCodeNameList}" onclick="cmptUpdate(this)" th:value="${monyCodeName.cmcdId}" th:text="${monyCodeName.cmcdNm}" class="mony_btn"></button>
+				</div>
 			</div>
 			<!-- End : 테이블 조작 -->
 
@@ -99,18 +99,31 @@
 						<th>번호</th>
 						<th>이름</th>
 						<th>이메일</th>
-						<th></th>
+						<th th:each="wlogCodeName:${wlogCodeNameList}" th:text="${wlogCodeName.cmcdNm}"></th>
+						<th>출석일수</th>
+						<th>교육일수</th>
+						<th>출석률<br>(%)</th>
+						<th>지원금</th>
+						<th>지급일</th>
+						<th>지급상태</th>
 					</tr>
 				</thead>
-				<tbody id="stdt_list_table_tbody" class="stdt_list_table_tbody">
-					<tr th:each="subsidy:${subsidyList}" class="stdt_list_table_row">
+				<tbody id="subsidy_list_table_tbody" class="subsidy_list_table_tbody">
+					<tr th:each="subsidy:${subsidyList}" class="subsidy_list_table_row">
 						<td class="fixed_length_cell">
-							<input type="checkbox" name="checkedStdt" th:value="${stdt.stdtId}">
+							<input type="checkbox" name="checkedStdt" th:value="${subsidy.monyId}">
 						</td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
+						<td class="fixed_length_cell" th:text="${subsidy.rowNum}">번호</td>
+						<td class="fixed_length_cell" th:text="${subsidy.stdtNm}">이름</td>
+						<td class="variable_length_cell" th:text="${subsidy.userEmail}">이메일</td>
+<!-- 						<td class="number_cell" th:each="wlogCodeName:${wlogCodeNameList}" th:text="${#strings.substring(#strings.setSplit(subsidy.wlog,',')[wlogCodeNameStat.count-1],10,)}">?</td> -->
+						<td class="number_cell" th:each="wlogCodeName:${wlogCodeNameList}">?</td>
+						<td class="number_cell" th:text="${subsidy.wlogCnt}">출석일수</td>
+						<td class="number_cell" th:text="${subsidy.maxWlogCnt}">교육일수</td>
+						<td class="number_cell" th:text="${subsidy.wlogCnt / subsidy.maxWlogCnt * 100.0}">출석률</td>
+						<td class="number_cell" th:text="${subsidy.clssSubsidy}">지원금</td>
+						<td class="fixed_length_cell" th:text="${subsidy.paidDd}">지급일</td>
+						<td class="fixed_length_cell" th:text="${subsidy.monyNm}" th:value="${subsidy.monyCd}">지급상태</td>
 					</tr>
 				</tbody>
 			</table>
