--- a/KosaESS/src/main/resources/templates/include/student_footer.html
+++ b/KosaESS/src/main/resources/templates/include/student_footer.html
@@ -23,8 +23,10 @@
 					<h2>Contact</h2>
 					<ul>
 						<li><img th:src="@{/img/ping.png}"><span
-							style="width: 80px;">주소 </span><span>서울시 용산구 청파로 61길 5 6F~8F</span></li>
-						<li><img th:src="@{/img/phone.png}"><span style="width: 80px;">전화번호 </span><span>010-5744-9937</span></li>
+							style="width: 80px;">주소 </span><span>서울시 용산구 청파로 61길 5
+								6F~8F</span></li>
+						<li><img th:src="@{/img/phone.png}"><span
+							style="width: 80px;">전화번호 </span><span>010-5744-9937</span></li>
 						<li><img th:src="@{/img/email.png}"><span
 							style="width: 80px;">이메일 </span><span>kcceducation@gmail.com</span></li>
 					</ul>
@@ -32,9 +34,9 @@
 				<div class="emailJoin">
 					<label for="email"
 						style="padding-bottom: 20%; color: #E7EFF3; font-weight: bold; font-size: 18px;">협회
-						소식을 받아보새요.</label> <input type="email" placeholder="이메일을 입력하세요." id="email"
-						style="width: 80%;">
-					<button type="submit">구독하기</button>
+						소식을 받아보세요.</label> <input type="email" placeholder="이메일을 입력하세요."
+						id="email" style="width: 80%;">
+					<button type="submit" onclick="subscribe()">구독하기</button>
 				</div>
 			</div>
 		</div>
