--- a/KosaESS/src/main/resources/templates/include/student_subbar.html
+++ b/KosaESS/src/main/resources/templates/include/student_subbar.html
@@ -22,6 +22,9 @@
 			<li data-image="/img/inquiry_white.png"
 				data-original-image="/img/inquiry_navy.png"><img
 				th:src="@{/img/inquiry_white.png}"><span>문의 내역</span></li>
+			<li data-image="/img/money_icon_white.png"
+				data-original-image="/img/money_icon_navy.png"><img
+				th:src="@{/img/money_icon_white.png}"><span>지원금 수령 내역</span></li>
 		</ul>
 	</div>
 </body>
