--- a/KosaESS/src/main/resources/static/css/student/class_list.css
+++ b/KosaESS/src/main/resources/static/css/student/class_list.css
@@ -17,7 +17,6 @@ ul {
 	padding: 0px 5%;
 	align-items: center;
 	justify-content: space-between;
-	cursor: pointer;
 }
 
 input {
@@ -390,6 +389,11 @@ a, .searchBtn, select {
 	margin: 0 2%;
 	border: 0;
 	font-size: 15px;
+	cursor: pointer
+}
+
+.openModalBtn:hover, .applyBtn:hover, .aplyBtn:hover, .closeModalBtn:hover, .searchBtn:hover{
+	background-color: #F1A77E;
 }
 
 #file-upload-button {
