--- a/KosaESS/src/main/resources/static/css/student/footer.css
+++ b/KosaESS/src/main/resources/static/css/student/footer.css
@@ -18,7 +18,6 @@ footer {
 	margin: 2% 0 0 0;
 }
 
-
 .footerBody li img {
 	height: 30px;
 	padding: 5px 0;
@@ -51,8 +50,9 @@ button {
 	display: flex;
 	align-items: center;
 }
-.footerBody .contact img{
-	width:28px;
+
+.footerBody .contact img {
+	width: 28px;
 }
 
 .emailJoin {
@@ -77,6 +77,7 @@ button {
 	font-weight: bold;
 	color: #0E5881;
 	margin-bottom: 10%;
+	border-radius: 10px;
 }
 
 .footerBody button {
@@ -86,7 +87,7 @@ button {
 	font-weight: bold;
 	border-radius: 10px;
 	border-style: none;
-	width: 50%;
+	width: 90%;
 }
 
 .footerFoot {
