--- a/KosaESS/src/main/resources/static/css/student/inquiry_list.css
+++ b/KosaESS/src/main/resources/static/css/student/inquiry_list.css
@@ -46,6 +46,9 @@
 
 .inquiry-table td:nth-child(2) {
 	width: 50%;
+	text-overflow: ellipsis;
+	overflow: hidden;
+	white-space: nowrap;
 }
 
 .inquiry-table td:nth-child(3) {
@@ -157,6 +160,6 @@ input::placeholder {
 	color: white;
 }
 
-select{
+select {
 	cursor: pointer;
 }
