--- a/KosaESS/src/main/resources/templates/student/notice_detail.html
+++ b/KosaESS/src/main/resources/templates/student/notice_detail.html
@@ -23,29 +23,41 @@
 						<td style="text-align: left;"><span
 							style="margin-left: 20px;" th:text="${noticeDetail.postTitle}"></span></td>
 						<th>게시일자</th>
-						<td style="width: 15%;"><span th:text="${noticeDetail.rgstDd}"></span></td>
+						<td style="width: 10%; padding: 4px 0;"><span
+							th:text="${noticeDetail.rgstDd}"></span></td>
+						<th>조회수</th>
+						<td><span th:text="${noticeDetail.postHit}"></span></td>
 					</tr>
+				</table>
+				<div
+					style="width: 95%; text-align: left; padding-left: 10%; margin: 16px 0; padding-bottom: 5%;">
+					<div>
+						<pre>
+						<h4 th:utext="${noticeDetail.postContent}"></h4>
+						</pre>
+						<ul>
+							<li th:each="FileVO : ${noticeFileList}"><a
+								th:if="${FileVO.fType == 'image'}"> <img style="width: 80%;"
+									th:src="@{/student/file/__${FileVO.fileId}__/__${FileVO.fileSubId}__}"><br>
+							</a></li>
+						</ul>
+					</div>
+				</div>
+				<table>
 					<tr>
 						<th>관련 파일</th>
 						<td><ul
-								style="margin: 0; text-align: left; padding-left: 3%;">
+								style="margin: 0; text-align: left;">
 								<li th:each="FileVO : ${noticeFileList}"><a
-									style="display: flex;"
+									style="display: flex;" th:if="${FileVO.fType == 'application'}"
 									th:href="@{/download/file/__${FileVO.fileId}__/__${FileVO.fileSubId}__}"
 									th:title="${FileVO.fileNm}"> <img style="height: 20px;"
 										th:src="@{/img/file_icon.png}" alt="file  아이콘"> <span
 										style="margin-left: 5px;" th:text="${FileVO.fileNm}"></span><br>
 								</a></li>
 							</ul></td>
-						<th>조회수</th>
-						<td><span th:text="${noticeDetail.postHit}"></span></td>
 					</tr>
 				</table>
-				<div style="width: 80%;">
-					<div>
-						<h4 th:utext="${noticeDetail.postContent}"></h4>
-					</div>
-				</div>
 			</div>
 			<div
 				style="position: fixed; display: block; right: 20px; bottom: 20px; width: 15%;">
