--- a/KosaESS/src/main/resources/templates/student/mypage.html
+++ b/KosaESS/src/main/resources/templates/student/mypage.html
@@ -102,7 +102,9 @@
 				<div class="applyList" style="display: none;">
 					<div class="listHead">
 						<h3>교육 과정 지원 내역</h3>
-						<p>총 <span class="aplyCnt"></span>건</p>
+						<p>
+							총 <span class="aplyCnt"></span>건
+						</p>
 					</div>
 					<div>
 						<table class="applyTable">
@@ -151,7 +153,9 @@
 				<div class="completeList" style="display: none;">
 					<div class="listHead">
 						<h3>교육 과정 이수 내역</h3>
-						<p>총 <span class="rgstCnt"></span>건</p>
+						<p>
+							총 <span class="rgstCnt"></span>건
+						</p>
 					</div>
 					<div>
 						<table class="rgstTable">
@@ -196,7 +200,16 @@
 				<div class="workLog" style="display: none;">
 					<div class="listHead">
 						<h3>출퇴근 관리</h3>
-						<p>총 <span class="wlogCnt"></span>건</p>
+						<p>
+							총 <span class="wlogCnt"></span>건
+						</p>
+					</div>
+					<div>
+						<select name="wlogNm" id="wlogClssNm">
+							<option value="">전체</option>
+							<option th:each="Wlog: ${wlogList}" class="wlogOption"
+								th:value="${Wlog.clssNm}" th:text="${Wlog.clssNm}">
+						</select>
 					</div>
 					<div>
 						<table class="wlogTable">
@@ -238,7 +251,9 @@
 				<div class="inquiryList" style="display: none;">
 					<div class="listHead">
 						<h3>문의 내역</h3>
-						<p>총 <span class="postCnt"></span>건</p>
+						<p>
+							총 <span class="postCnt"></span>건
+						</p>
 					</div>
 					<table class="postTable">
 						<thead>
@@ -284,7 +299,9 @@
 				<div class="moneyList" style="display: none;">
 					<div class="listHead">
 						<h3>지원금 수령 내역</h3>
-						<p>총 <span class="moneyCnt"></span>건</p>
+						<p>
+							총 <span class="moneyCnt"></span>건
+						</p>
 					</div>
 					<table class="moneyTable">
 						<thead>
@@ -296,7 +313,7 @@
 							</tr>
 						</thead>
 						<tbody>
-							
+
 						</tbody>
 					</table>
 					<div class="paging paging4">
