--- a/KosaESS/src/main/resources/templates/student/notice_detail.html
+++ b/KosaESS/src/main/resources/templates/student/notice_detail.html
@@ -26,18 +26,18 @@
 						<td style="width: 10%; padding: 4px 0;"><span
 							th:text="${noticeDetail.rgstDd}"></span></td>
 						<th>조회수</th>
-						<td><span th:text="${noticeDetail.postHit}"></span></td>
+						<td  style="width: 10%;"><span th:text="${noticeDetail.postHit}"></span></td>
 					</tr>
 				</table>
 				<div
-					style="width: 95%; text-align: left; padding-left: 10%; margin: 16px 0; padding-bottom: 5%;">
+					style="width: 95%; text-align: left; margin: 16px 0; padding-bottom: 5%;">
 					<div>
 						<pre>
 						<h4 th:utext="${noticeDetail.postContent}"></h4>
 						</pre>
 						<ul>
 							<li th:each="FileVO : ${noticeFileList}"><a
-								th:if="${FileVO.fType == 'image'}"> <img style="width: 80%;"
+								th:if="${FileVO.fType == 'image'}"> <img style="width: 60%;"
 									th:src="@{/student/file/__${FileVO.fileId}__/__${FileVO.fileSubId}__}"><br>
 							</a></li>
 						</ul>
